# Purchstore

./: Dockerfile  README.md  app.py  codes.json  compras.sqlite3  pyproject.toml  requirements.txt
dump/: compras-2024-07-11_21:37:42.csv  compras-2024-07-30_17:08:33.csv  compras-2024-08-13_19:48:37.csv  compras-2024-08-18_07:31:35.csv
purchstore/: scrapper.py  utils.py
purchstore/database/: __init__.py  db.py
purchstore/models/: __init__.py  compra.py  itens.py
