[tool.poetry]
name = "purchstore"
version = "0.1.0"
description = ""
authors = ["Antonio Fernando <antoniofernandodj@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pyzbar = "^0.1.9"
bs4 = "^0.0.2"
requests = "^2.32.3"
selenium = "^4.23.1"
lxml = "^5.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
